fixing .fa-eye bug on Firefox

--- a/openstack_dashboard/static/dashboard/scss/FIWARE-Accounts/pages/_auth.scss
+++ b/openstack_dashboard/static/dashboard/scss/FIWARE-Accounts/pages/_auth.scss
@@ -280,16 +280,6 @@
   }
 }
 
-
-
-.glyphicon{
-  @extend .fa;
-}
-.glyphicon-eye-open{
-  @extend .fa-eye;
-}
-
-
 #authorize_application_modal{
   .modal-header{
     border: none;
